objects/HealthCloudGA__EhrAllergyIntolerance__c.object
<CustomObject>
    <description>Indicates the patient has a susceptibility to an adverse reaction upon exposure to a specified substance.</description>
    <fields>
        <fullName>HealthCloudGA__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Individual account which represents the patient in force.com</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>EHR Allergy Intolerances</relationshipLabel>
        <relationshipName>AllergyIntolerances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CriticalityCode__c</fullName>
        <description>Criticality Symbol in syntax defined by the system</description>
        <label>Criticality Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CriticalityLabel__c</fullName>
        <label>Criticality Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CriticalitySystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Criticality System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRestricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsVisibleOnPatientCard__c</fullName>
        <description>Returns true if value of Status Code field is NOT equal to &apos; Resolved &apos;, else returns false.</description>
        <formula>IF(  UPPER(HealthCloudGA__StatusLabel__c)   &lt;&gt; &apos;RESOLVED&apos; , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Returns true if value of Status Label field is NOT equal to &apos; Resolved &apos;, else returns false.</inlineHelpText>
        <label>IsVisibleOnPatientCard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who the sensitivity is for</description>
        <label>Patient</label>
        <referenceTo>HealthCloudGA__EhrPatient__c</referenceTo>
        <relationshipLabel>EHR Allergy Intolerances</relationshipLabel>
        <relationshipName>AllergyIntolerances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Reaction255__c</fullName>
        <description>Reactions associated with the sensitivity</description>
        <label>Reaction 255</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Reaction__c</fullName>
        <label>Reaction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RecordedDate__c</fullName>
        <label>Recorded Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RecorderName255__c</fullName>
        <label>Recorder Name 255</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RecorderName__c</fullName>
        <label>Recorder Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Recorder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who recorded the sensitivity</description>
        <label>Recorder</label>
        <referenceTo>HealthCloudGA__EhrPractitioner__c</referenceTo>
        <relationshipLabel>Allergy Intolerances</relationshipLabel>
        <relationshipName>AllergyIntolerances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SensitivityTest1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Observation that confirm or refute</description>
        <label>Sensitivity Test1</label>
        <referenceTo>HealthCloudGA__EhrObservation__c</referenceTo>
        <relationshipLabel>EHR Allergy Intolerances</relationshipLabel>
        <relationshipName>AllergyIntolerances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SensitivityTest2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Observation that confirm or refute</description>
        <label>Sensitivity Test2</label>
        <referenceTo>HealthCloudGA__EhrObservation__c</referenceTo>
        <relationshipLabel>EHR Allergy Intolerances (Sensitivity Test2)</relationshipLabel>
        <relationshipName>AllergyIntolerances2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SensitivityTest3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Observation that confirm or refute</description>
        <label>Sensitivity Test3</label>
        <referenceTo>HealthCloudGA__EhrObservation__c</referenceTo>
        <relationshipLabel>EHR Allergy Intolerances (Sensitivity Test3)</relationshipLabel>
        <relationshipName>AllergyIntolerances3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SensitivityTypeCode__c</fullName>
        <description>Sensitivity Type Symbol in syntax defined by the system</description>
        <label>Sensitivity Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SensitivityTypeLabel__c</fullName>
        <label>Sensitivity Type Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SensitivityTypeSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Sensitivity Type System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated</description>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__StatusCode__c</fullName>
        <description>Status Symbol in syntax defined by the system</description>
        <label>Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__StatusLabel__c</fullName>
        <label>Status Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__StatusSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Status System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Substance255__c</fullName>
        <description>The substance that causes the sensitivity</description>
        <label>Substance 255</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SubstanceCodeSystem__c</fullName>
        <description>System for the code that identifies this allergy</description>
        <label>Substance Code System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SubstanceCode__c</fullName>
        <description>Code that identifies this allergy</description>
        <label>Substance Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SubstanceLong__c</fullName>
        <label>Substance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>EHR Allergy Intolerance</label>
    <nameField>
        <displayFormat>Alle-{0}</displayFormat>
        <label>EHR Allergy Intolerance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Allergy Intolerances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>